<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>

    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="article">Article</string>
    <string name="history">History</string>
    <string name="score">Score</string>
    <string name="prediction">Prediction</string>
    <string name="delete_button">delete button</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="save">Save</string>
    <string name="image_will_be_analyzed">Image will be analyzed</string>
    <string name="image_selected_for_analyzed">image selected for analyzed</string>
    <string name="image_articles">image articles</string>
    <string name="analyzed_image_in_history">Analyzed image in history</string>
</resources>